2002-10-24  Neal Birch <nealbirch@attbi.com>
	    Moved networking.sh to net-tools and modified CONFIGURE to recognize that. Modified mount.sh to not mount networked drives. Added mountnfs.sh to scriptdir to provide for networked drives. Modified configure to detect and allow for custom scripts. Added lib_runlevel file for runlevel management.
2002-10-20  Neal Birch <nealbirch@attbi.com>
	    Modified networking.sh to take into consideration those who have GATEWAY set by another program, such as PPP for aDSL.

2002-10-16  Neal Birch <nealbirch@attbi.com>
	    Modified networking.sh and the CONFIGURE script to take in consideration those who put their network device drivers into the kernel, fixes bug 1308. Corrected usage info to reflect ability to load a specific device or devices.

2002-10-10  Eric Schabell <eschabell@sourcemage.org>

		Removed -H from networking script, fixes bug#1196.

2002-10-02  Eric Sandall <eric@sandall.us>
		Modified mount.new.sh to not mount networked filesystems, as networking hasn't been started at this stage in the boot process.
		Added mountnfs.sh which mounts the networked filesystems, since networking should have been started by now.  :)  This and mount.new should replace the current mount.sh, once they've been tested a little more.  :)  I use them on all of my machines, and they got rid of those "Failed" errors for mount and the "RPC not found" for trying to mount my networked filesystems.
		Added and xdm.sh, gdm.sh and kdm.sh to start those login managers, should create
one for wdm as well (when is my wdm spell going to go in?).

2002-10-2   Neal Birch <nealbirch@attbi.com>
	    Fixed typo in libinit.d. Thanks nkj!
2002-9-30   Neal Birch <nealbirch@attbi.com>
	    Modified BUILD to take care of lack of check for existing script file bug (Thanks, Treeve!); changed scripts directory name to scriptdir to prevent possible naming conflicts, changed name of script.que to scriptque.temp to ease removal of temp files.