@@ -1,10 +1,10 @@
            SPELL=init.d
-         VERSION=1.05
+         VERSION=1.06
          ENTERED=20020719
-         UPDATED=20021024
+         UPDATED=20021111
       MAINTAINER=nealbirch@attbi.com
            SHORT='Install functions and selected system scripts then sets runlevels and  priorities.'
 cat << EOF
-Installs and sets runlevel priority on basic system init scripts, such as mount.sh and  mountnfs.sh.
+Installs and sets runlevel priority on basic system init scripts, such as localtime.sh, mount.sh and  mountnfs.sh.
 It includes functions script modified from LFS-3.1. Originally rewritten by Gerard Beekmans - gerard@linuxfromscratch.org, with code based on Matthias Benkmanns simpleinit-msb http://winterdrache.de/linux/newboot/index.html. Modified for SourceMage GNU linux.
 EOF
