@@ -1,5 +1,7 @@
+2002-11-11  Neal Birch <nealbirch@attbi.com>
+	    Added localtime.sh to spell.
 2002-10-24  Neal Birch <nealbirch@attbi.com>
-	    Moved networking.sh to net-tools and modified CONFIGURE to recognize that. Modified mount.sh to not mount networked drives. Added mountnfs.sh to scriptdir to provide for networked drives. Modified configure to detect and allow for custom scripts. Added lib_runlevel file for runlevel management.
+	    Moved networking.sh to net-tools and modified CONFIGURE to recognize that. Modified mount.sh to not mount networked drives. Added mountnfs.sh to scriptdir to provide for networked drives. Modified configure to detect and allow for custom scripts. Added lib_runlevel functions for runlevel management.
 2002-10-20  Neal Birch <nealbirch@attbi.com>
 	    Modified networking.sh to take into consideration those who have GATEWAY set by another program, such as PPP for aDSL.
 
